# vendocasa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  railway.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  router.py  semesters.py  transactions.py  valuations.py  zones.py
backend/app/models/: __init__.py  geocode_cache.py  quotation.py  transaction.py  zone.py
backend/app/schemas/: enhanced_valuation.py  transaction.py  valuation.py
backend/app/services/: agent.py  coefficients.py  geocoder.py  valuation.py  zone_lookup.py
backend/scripts/: import_omi.py  import_omi_quotations.py  import_omi_zones.py
backend/sql/: 001_schema.sql
docs/: README.md  api.md  architecture.md  data-pipeline.md  data-sources.md  deployment.md  index.md  legal.md  valuation-methodology.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/Chat/: ChatMessage.tsx  ChatPanel.tsx  InlineToolResult.tsx
frontend/src/components/Education/: AgentIncentives.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/Map/: MapContainer.tsx  ZoneLayer.tsx  ZonePopup.tsx
frontend/src/components/Search/: AddressSearch.tsx
frontend/src/components/Transactions/: TransactionForm.tsx
frontend/src/components/Valuation/: CoefficientWizard.tsx  ComparablesTable.tsx  QuotationTable.tsx  (+1 more)
frontend/src/hooks/: useValuation.ts  useZones.ts
frontend/src/types/: index.ts
